Avoid showing parent box when collapsed

--- a/frontend/src/global_styles/content/work_packages/timelines/_timelines.sass
+++ b/frontend/src/global_styles/content/work_packages/timelines/_timelines.sass
@@ -98,6 +98,9 @@
   background-color: #d3d3d361
 
 .wp-timeline-cell.row-hovered .children-duration-hover-container
-    display: block
+  display: block
+
+.wp-timeline-cell.__hierarchy-root-collapsed .children-duration-hover-container
+  display: none
 
 
